last changes to foundry set up

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "workspaces": {
     "packages": [
       "packages/hardhat",
-      "packages/foundry",
       "packages/nextjs"
     ]
   },
@@ -13,16 +12,14 @@
     "account": "yarn workspace @se-2/hardhat account",
     "chain": "yarn workspace @se-2/hardhat chain",
     "fork": "yarn workspace @se-2/hardhat fork",
-    "deploy": "yarn workspace foundry deploy",
-    "verify": "yarn workspace @se-2/foundry verify",
-    "hardhat-verify": "yarn workspace @se-2/hardhat hardhat-verify",
-    "compile": "yarn workspace @se-2/foundry compile",
-    "generate": "yarn workspace @se-2/foundry generate",
-    "flatten": "yarn workspace @se-2/foundry flatten",
-    "foundry:lint": "yarn workspace @se-2/foundry lint",
-    "foundry:lint-staged": "yarn workspace @se-2/foundry lint-staged",
-    "test": "yarn foundry:test",
-    "format": "yarn next:format && yarn foundry:format",
+    "deploy:hardhat": "yarn workspace @se-2/hardhat deploy",
+    "verify": "yarn workspace @se-2/hardhat verify",
+    "compile": "yarn workspace @se-2/hardhat compile",
+    "generate": "yarn workspace @se-2/hardhat generate",
+    "hardhat:test": "yarn workspace @se-2/hardhat test",
+    "hardhat:lint": "yarn workspace @se-2/hardhat lint",
+    "hardhat:lint-staged": "yarn workspace @se-2/hardhat lint-staged",
+    "hardhat:format": "yarn workspace @se-2/hardhat format",
     "start": "yarn workspace @se-2/nextjs dev",
     "next:lint": "yarn workspace @se-2/nextjs lint",
     "next:format": "yarn workspace @se-2/nextjs format",
@@ -31,14 +28,11 @@
     "next:serve": "yarn workspace @se-2/nextjs serve",
     "postinstall": "husky install",
     "precommit": "lint-staged",
-    "vercel": "yarn workspace @se-2/nextjs vercel",
-    "vercel:yolo": "yarn workspace @se-2/nextjs vercel:yolo",
-    "foundry:init": "forge init packages/foundry",
     "foundry:build": "forge build --root packages/foundry",
     "foundry:test": "forge test --root packages/foundry",
     "foundry:coverage": "forge coverage --root packages/foundry",
-    "foundry:deploy": "forge script --root packages/foundry script/Deploy.s.sol --broadcast --verify --rpc-url $RPC_URL",
-    "foundry:verify": "forge verify-contract --root packages/foundry --chain-id $CHAIN_ID --num-of-optimizations 1000000 --compiler-version $COMPILER_VERSION $CONTRACT_ADDRESS $CONTRACT_NAME $ETHERSCAN_API_KEY",
+    "foundry:deploy": "forge script --root packages/foundry script/Deploy.s.sol --broadcast --verify --rpc-url ${RPC_URL}",
+    "foundry:verify": "forge verify-contract --root packages/foundry --chain-id ${CHAIN_ID} --num-of-optimizations 1000000 --compiler-version ${COMPILER_VERSION} ${CONTRACT_ADDRESS} ${CONTRACT_NAME} ${ETHERSCAN_API_KEY}",
     "foundry:flatten": "forge flatten --root packages/foundry",
     "foundry:format": "forge fmt --root packages/foundry",
     "foundry:gas-report": "forge test --root packages/foundry --gas-report",
