scaffold set up

--- a/package.json
+++ b/package.json
@@ -4,39 +4,34 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "packages/hardhat",
-      "packages/nextjs"
+      "packages/*"
     ]
   },
   "scripts": {
-    "account": "yarn workspace @se-2/hardhat account",
-    "chain": "anvil",
-    "fork": "yarn workspace @se-2/hardhat fork",
-    "deploy:hardhat": "yarn workspace @se-2/hardhat deploy",
-    "verify": "yarn workspace @se-2/hardhat verify",
-    "compile": "yarn workspace @se-2/hardhat compile",
-    "generate": "yarn workspace @se-2/hardhat generate",
-    "hardhat:test": "yarn workspace @se-2/hardhat test",
-    "hardhat:lint": "yarn workspace @se-2/hardhat lint",
-    "hardhat:lint-staged": "yarn workspace @se-2/hardhat lint-staged",
-    "hardhat:format": "yarn workspace @se-2/hardhat format",
-    "start": "yarn workspace @se-2/nextjs dev",
-    "next:lint": "yarn workspace @se-2/nextjs lint",
-    "next:format": "yarn workspace @se-2/nextjs format",
-    "next:check-types": "yarn workspace @se-2/nextjs check-types",
-    "next:build": "yarn workspace @se-2/nextjs build",
-    "next:serve": "yarn workspace @se-2/nextjs serve",
+    "account": "yarn workspace @se-2/foundry account",
+    "chain": "yarn workspace @se-2/foundry chain",
+    "compile": "yarn workspace @se-2/foundry compile",
+    "deploy": "yarn workspace @se-2/foundry deploy",
+    "deploy:verify": "yarn workspace @se-2/foundry deploy:verify",
+    "flatten": "yarn workspace @se-2/foundry flatten",
+    "fork": "yarn workspace @se-2/foundry fork",
+    "format": "yarn next:format && yarn foundry:format",
+    "foundry:format": "yarn workspace @se-2/foundry format",
+    "foundry:lint": "yarn workspace @se-2/foundry lint",
+    "foundry:test": "yarn workspace @se-2/foundry test",
+    "generate": "yarn workspace @se-2/foundry generate",
     "postinstall": "husky install",
+    "next:build": "yarn workspace @se-2/nextjs build",
+    "next:check-types": "yarn workspace @se-2/nextjs check-types",
+    "next:format": "yarn workspace @se-2/nextjs format",
+    "next:lint": "yarn workspace @se-2/nextjs lint",
+    "next:serve": "yarn workspace @se-2/nextjs serve",
     "precommit": "lint-staged",
-    "foundry:build": "forge build --root packages/foundry",
-    "foundry:test": "forge test --root packages/foundry",
-    "foundry:coverage": "forge coverage --root packages/foundry",
-    "foundry:deploy": "forge script --root packages/foundry script/Deploy.s.sol --broadcast --verify --rpc-url ${RPC_URL}",
-    "foundry:verify": "forge verify-contract --root packages/foundry --chain-id ${CHAIN_ID} --num-of-optimizations 1000000 --compiler-version ${COMPILER_VERSION} ${CONTRACT_ADDRESS} ${CONTRACT_NAME} ${ETHERSCAN_API_KEY}",
-    "foundry:flatten": "forge flatten --root packages/foundry",
-    "foundry:format": "forge fmt --root packages/foundry",
-    "foundry:gas-report": "forge test --root packages/foundry --gas-report",
-    "foundry:snapshot": "forge snapshot --root packages/foundry"
+    "start": "yarn workspace @se-2/nextjs dev",
+    "test": "yarn foundry:test",
+    "vercel": "yarn workspace @se-2/nextjs vercel",
+    "vercel:yolo": "yarn workspace @se-2/nextjs vercel:yolo",
+    "verify": "yarn workspace @se-2/foundry verify"
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
