forge install: v4-core

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = packages/foundry/lib/solidity-bytes-utils
 	url = https://github.com/GNSPS/solidity-bytes-utils
 
+[submodule "packages/foundry/lib/v4-core"]
+	path = packages/foundry/lib/v4-core
+	url = https://github.com/uniswap/v4-core
