--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "packages/foundry/lib/v4-core"]
 	path = packages/foundry/lib/v4-core
 	url = https://github.com/uniswap/v4-core
+[submodule "packages/foundry/lib/v4-periphery"]
+	path = packages/foundry/lib/v4-periphery
+	url = https://github.com/uniswap/v4-periphery
