--- a/packages/foundry/foundry.toml
+++ b/packages/foundry/foundry.toml
@@ -2,7 +2,10 @@
 src = 'contracts'
 out = 'out'
 libs = ['lib']
+ffi = true
 fs_permissions = [{ access = "read-write", path = "./"}]
+solc_version = "0.8.24"
+evm_version = "cancun"
 
 [rpc_endpoints]
 default_network = "http://127.0.0.1:8545"
