--- a/packages/foundry/foundry.toml
+++ b/packages/foundry/foundry.toml
@@ -8,7 +8,7 @@ solc_version = "0.8.24"
 evm_version = "cancun"
 
 [rpc_endpoints]
-default_network = "http://127.0.0.1:8545"
+default_network = "https://eth-sepolia.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 localhost = "http://127.0.0.1:8545"
 
 mainnet = "https://eth-mainnet.alchemyapi.io/v2/${ALCHEMY_API_KEY}"
