--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.28.6",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@worldcoin/idkit": "^1.2.2",
     "blo": "^1.2.0",
     "burner-connector": "^0.0.8",
     "daisyui": "4.5.0",
