--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "packages/foundry/lib/v4-periphery"]
 	path = packages/foundry/lib/v4-periphery
 	url = https://github.com/uniswap/v4-periphery
+[submodule "lib/LayerZero-v2"]
+	path = lib/LayerZero-v2
+	url = https://github.com/LayerZero-Labs/LayerZero-v2
