--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@worldcoin/idkit": "^1.2.2",
+    "lucide-react": "^0.408.0",
     "prop-types": "^15.8.1"
   }
 }
